<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="rootKey">

    <DropDownPreference
        android:defaultValue="1"
        android:entries="@array/theme_labels"
        android:entryValues="@array/theme_values"
        app:key="@string/pref_key_application_theme"
        app:title="@string/pref_title_theme"
        app:useSimpleSummaryProvider="true"/>

    <DropDownPreference
        android:defaultValue="1"
        android:entries="@array/language_labels"
        android:entryValues="@array/language_values"
        app:key="@string/pref_key_language"
        app:title="@string/pref_title_language"
        app:useSimpleSummaryProvider="true"/>

    <Preference
        app:isPreferenceVisible="false"
        app:key="@string/pref_key_logged_in_user"/>

    <Preference
        android:dependency="@string/pref_key_logged_in_user"
        app:key="@string/pref_key_log_out"
        app:title="@string/pref_title_log_out"/>

</PreferenceScreen>